docs/paper-trades/v5/2026-05-08_report.md
# v5 Paper Trading Report -- 2026-05-08

## Summary

| Metric | Value |
|--------|-------|
| Engine | v5 multi-pool |
| Capital | Rs 10.00L |
| Regime | SIDEWAYS |
| **Net P&L** | **Rs 380 (+0.04%)** |
| Trades | 47 (L:19 S:28) |
| Win Rate | 60% |

## Trades

| # | Type | Pool | Stock | Entry | Exit | P&L | Reason |
|---|------|------|-------|-------|------|-----|--------|
| 1 | SHORT | INTRADAY | UNITDSPR | 1279.80 | 1287.70 | Rs -205 | STOPLOSS |
| 2 | SHORT | INTRADAY | BPCL | 303.00 | 305.55 | Rs -178 | STOPLOSS |
| 3 | SHORT | INTRADAY | MFSL | 1688.90 | 1698.20 | Rs -112 | STOPLOSS |
| 4 | SHORT | INTRADAY | GODREJPROP | 1858.00 | 1876.40 | Rs -221 | STOPLOSS |
| 5 | SHORT | INTRADAY | MFSL | 1688.90 | 1698.60 | Rs -19 | STOPLOSS |
| 6 | SHORT | INTRADAY | LICHSGFIN | 581.60 | 580.60 | Rs +52 | FLAT_FORCE_EXIT |
| 7 | SHORT | INTRADAY | APLAPOLLO | 1955.80 | 1953.10 | Rs +24 | FLAT_FORCE_EXIT |
| 8 | SHORT | INTRADAY | UNIONBANK | 165.45 | 165.03 | Rs +46 | FLAT_FORCE_EXIT |
| 9 | SHORT | INTRADAY | VMM | 124.38 | 124.06 | Rs +11 | FLAT_FORCE_EXIT |
| 10 | SHORT | INTRADAY | BPCL | 303.00 | 302.65 | Rs +5 | FLAT_FORCE_EXIT |
| 11 | SHORT | INTRADAY | LUPIN | 2438.60 | 2388.90 | Rs +398 | TARGET |
| 12 | SHORT | INTRADAY | FEDERALBNK | 293.55 | 295.10 | Rs -88 | STOPLOSS |
| 13 | SHORT | INTRADAY | PNB | 108.40 | 107.69 | Rs +104 | STOPLOSS |
| 14 | SHORT | INTRADAY | VEDL | 303.25 | 296.65 | Rs +389 | TARGET |
| 15 | SHORT | INTRADAY | LUPIN | 2438.60 | 2380.10 | Rs +292 | TARGET |
| 16 | SHORT | INTRADAY | ONGC | 281.25 | 279.25 | Rs +190 | TIME_EXIT |
| 17 | SHORT | INTRADAY | AXISBANK | 1274.50 | 1267.80 | Rs +121 | TIME_EXIT |
| 18 | SHORT | INTRADAY | LGEINDIA | 1529.10 | 1507.10 | Rs +220 | TIME_EXIT |
| 19 | SHORT | INTRADAY | NMDC | 89.33 | 88.91 | Rs +20 | TIME_EXIT |
| 20 | SHORT | INTRADAY | LT | 3989.40 | 3974.50 | Rs +89 | TIME_EXIT |
| 21 | SHORT | INTRADAY | GVT&D | 4619.00 | 4623.20 | Rs -17 | TIME_EXIT |
| 22 | SHORT | INTRADAY | ABB | 7100.50 | 7015.00 | Rs +171 | TIME_EXIT |
| 23 | SHORT | INTRADAY | BPCL | 303.00 | 302.65 | Rs +18 | TIME_EXIT |
| 24 | SHORT | INTRADAY | UNIONBANK | 165.45 | 165.92 | Rs -40 | TIME_EXIT |
| 25 | SHORT | INTRADAY | VOLTAS | 1330.10 | 1324.60 | Rs +50 | TIME_EXIT |
| 26 | SHORT | INTRADAY | IOC | 145.22 | 144.65 | Rs +44 | TIME_EXIT |
| 27 | SHORT | INTRADAY | COALINDIA | 460.40 | 455.30 | Rs +133 | TIME_EXIT |
| 28 | SHORT | INTRADAY | SAIL | 185.68 | 184.69 | Rs +58 | TIME_EXIT |
| 29 | LONG | SWING | ETERNAL | 257.42 | 254.10 | Rs -365 | STOPLOSS |
| 30 | LONG | SWING | TMPV | 359.25 | 354.40 | Rs -340 | STOPLOSS |
| 31 | LONG | SWING | ETERNAL | 257.42 | 255.05 | Rs -261 | SIGNAL_FLIP |
| 32 | LONG | SWING | TMPV | 359.25 | 355.65 | Rs -252 | SIGNAL_FLIP |
| 33 | LONG | SWING | ADANIPORTS | 1781.80 | 1755.40 | Rs -317 | STOPLOSS |
| 34 | LONG | SWING | GODFRYPHLP | 2411.10 | 2443.90 | Rs +164 | STOPLOSS |
| 35 | LONG | SWING | BHARATFORG | 2024.60 | 2000.90 | Rs -71 | SIGNAL_FLIP |
| 36 | LONG | SWING | HUDCO | 232.13 | 231.88 | Rs -12 | STOPLOSS |
| 37 | LONG | SWING | KPITTECH | 730.40 | 728.85 | Rs -37 | FLAT_FORCE_EXIT |
| 38 | LONG | SWING | MANKIND | 2446.50 | 2447.30 | Rs +5 | FLAT_FORCE_EXIT |
| 39 | LONG | SWING | PFC | 464.25 | 463.35 | Rs -17 | FLAT_FORCE_EXIT |
| 40 | LONG | SWING | MCX | 3100.20 | 3104.90 | Rs +9 | FLAT_FORCE_EXIT |
| 41 | LONG | SWING | COFORGE | 1349.30 | 1361.20 | Rs +167 | STOPLOSS |
| 42 | LONG | SWING | LTM | 4345.00 | 4353.90 | Rs +18 | FLAT_FORCE_EXIT |
| 43 | LONG | SWING | PERSISTENT | 5112.70 | 5127.10 | Rs +14 | FLAT_FORCE_EXIT |
| 44 | LONG | SWING | MANKIND | 2446.50 | 2448.00 | Rs +12 | FLAT_FORCE_EXIT |
| 45 | LONG | SWING | HUDCO | 232.13 | 231.89 | Rs -19 | FLAT_FORCE_EXIT |
| 46 | LONG | SWING | KPITTECH | 730.40 | 729.85 | Rs -18 | FLAT_FORCE_EXIT |
| 47 | LONG | SWING | RADICO | 3450.60 | 3487.00 | Rs +146 | STOPLOSS |