docs/paper-trades/v6/2026-05-08_report.md
# v5 Paper Trading Report -- 2026-05-08

## Summary

| Metric | Value |
|--------|-------|
| Engine | v5 multi-pool |
| Capital | Rs 10.00L |
| Regime | SIDEWAYS |
| **Net P&L** | **Rs 851 (+0.09%)** |
| Trades | 55 (L:25 S:30) |
| Win Rate | 67% |

## Trades

| # | Type | Pool | Stock | Entry | Exit | P&L | Reason |
|---|------|------|-------|-------|------|-----|--------|
| 1 | SHORT | INTRADAY | LUPIN | 2438.60 | 2380.00 | Rs +59 | TARGET |
| 2 | SHORT | INTRADAY | UNITDSPR | 1279.80 | 1281.80 | Rs -52 | FLAT_FORCE_EXIT |
| 3 | SHORT | INTRADAY | UNIONBANK | 165.45 | 165.00 | Rs +82 | FLAT_FORCE_EXIT |
| 4 | SHORT | INTRADAY | APLAPOLLO | 1955.80 | 1953.10 | Rs +27 | FLAT_FORCE_EXIT |
| 5 | SHORT | INTRADAY | BPCL | 303.00 | 302.50 | Rs +32 | FLAT_FORCE_EXIT |
| 6 | SHORT | INTRADAY | NMDC | 89.33 | 89.07 | Rs +11 | FLAT_FORCE_EXIT |
| 7 | SHORT | INTRADAY | COROMANDEL | 1928.20 | 1928.70 | Rs -0 | FLAT_FORCE_EXIT |
| 8 | SHORT | INTRADAY | COROMANDEL | 1928.20 | 1927.20 | Rs +3 | FLAT_FORCE_EXIT |
| 9 | SHORT | INTRADAY | UNIONBANK | 165.45 | 165.24 | Rs +8 | FLAT_FORCE_EXIT |
| 10 | SHORT | INTRADAY | POLICYBZR | 1660.00 | 1649.60 | Rs +21 | STOPLOSS |
| 11 | SHORT | INTRADAY | LUPIN | 2438.60 | 2387.70 | Rs +458 | TARGET |
| 12 | SHORT | INTRADAY | VEDL | 303.25 | 297.10 | Rs +400 | TARGET |
| 13 | SHORT | INTRADAY | GODREJPROP | 1858.00 | 1889.20 | Rs -374 | STOPLOSS |
| 14 | SHORT | INTRADAY | ICICIAMC | 3282.80 | 3224.60 | Rs +291 | TARGET |
| 15 | SHORT | INTRADAY | VEDL | 303.25 | 296.15 | Rs +284 | TARGET |
| 16 | SHORT | INTRADAY | ONGC | 281.25 | 279.25 | Rs +190 | TIME_EXIT |
| 17 | SHORT | INTRADAY | AXISBANK | 1274.50 | 1267.80 | Rs +20 | TIME_EXIT |
| 18 | SHORT | INTRADAY | RVNL | 306.60 | 304.70 | Rs +25 | TIME_EXIT |
| 19 | SHORT | INTRADAY | HINDALCO | 1046.00 | 1042.90 | Rs +9 | TIME_EXIT |
| 20 | SHORT | INTRADAY | NMDC | 89.33 | 88.91 | Rs +32 | TIME_EXIT |
| 21 | SHORT | INTRADAY | IOC | 145.22 | 144.65 | Rs +26 | TIME_EXIT |
| 22 | SHORT | INTRADAY | LT | 3989.40 | 3974.50 | Rs +15 | TIME_EXIT |
| 23 | SHORT | INTRADAY | COALINDIA | 460.40 | 455.35 | Rs +278 | TIME_EXIT |
| 24 | SHORT | INTRADAY | UNIONBANK | 165.45 | 165.92 | Rs -50 | TIME_EXIT |
| 25 | SHORT | INTRADAY | COROMANDEL | 1928.20 | 1927.50 | Rs +6 | TIME_EXIT |
| 26 | SHORT | INTRADAY | GVT&D | 4619.00 | 4623.20 | Rs -13 | TIME_EXIT |
| 27 | SHORT | INTRADAY | COCHINSHIP | 1801.60 | 1770.20 | Rs +314 | TIME_EXIT |
| 28 | SHORT | INTRADAY | SAIL | 185.68 | 184.69 | Rs +93 | TIME_EXIT |
| 29 | SHORT | INTRADAY | VOLTAS | 1330.10 | 1324.60 | Rs +60 | TIME_EXIT |
| 30 | SHORT | INTRADAY | BPCL | 303.00 | 302.65 | Rs +16 | TIME_EXIT |
| 31 | LONG | SWING | JIOFIN | 252.44 | 249.37 | Rs -83 | STOPLOSS |
| 32 | LONG | SWING | ETERNAL | 257.42 | 254.27 | Rs -299 | STOPLOSS |
| 33 | LONG | SWING | TMPV | 359.25 | 354.20 | Rs -389 | STOPLOSS |
| 34 | LONG | SWING | ETERNAL | 257.42 | 254.86 | Rs -282 | SIGNAL_FLIP |
| 35 | LONG | SWING | TMPV | 359.25 | 355.50 | Rs -259 | SIGNAL_FLIP |
| 36 | LONG | SWING | AMBUJACEM | 456.70 | 448.75 | Rs -111 | STOPLOSS |
| 37 | LONG | SWING | ADANIPORTS | 1781.00 | 1756.20 | Rs -298 | STOPLOSS |
| 38 | LONG | SWING | GODFRYPHLP | 2412.20 | 2442.00 | Rs +238 | STOPLOSS |
| 39 | LONG | SWING | HUDCO | 232.13 | 231.88 | Rs -12 | STOPLOSS |
| 40 | LONG | SWING | KPITTECH | 730.05 | 728.65 | Rs -34 | FLAT_FORCE_EXIT |
| 41 | LONG | SWING | MANKIND | 2446.50 | 2448.50 | Rs +12 | FLAT_FORCE_EXIT |
| 42 | LONG | SWING | PFC | 464.25 | 463.80 | Rs -9 | FLAT_FORCE_EXIT |
| 43 | LONG | SWING | MCX | 3100.20 | 3105.10 | Rs +10 | FLAT_FORCE_EXIT |
| 44 | LONG | SWING | PERSISTENT | 5112.70 | 5128.00 | Rs +15 | FLAT_FORCE_EXIT |
| 45 | LONG | SWING | LTM | 4345.00 | 4353.50 | Rs +17 | FLAT_FORCE_EXIT |
| 46 | LONG | SWING | KPITTECH | 730.40 | 728.25 | Rs -17 | FLAT_FORCE_EXIT |
| 47 | LONG | SWING | MANKIND | 2446.50 | 2448.00 | Rs +3 | FLAT_FORCE_EXIT |
| 48 | LONG | SWING | HUDCO | 232.13 | 231.60 | Rs -13 | FLAT_FORCE_EXIT |
| 49 | LONG | SWING | COFORGE | 1349.30 | 1357.20 | Rs +79 | STOPLOSS |
| 50 | LONG | SWING | RADICO | 3450.60 | 3483.00 | Rs +32 | STOPLOSS |
| 51 | LONG | SWING | 360ONE | 1128.20 | 1119.40 | Rs -79 | SIGNAL_FLIP |
| 52 | LONG | SWING | GODFRYPHLP | 2411.10 | 2425.50 | Rs +29 | SIGNAL_FLIP |
| 53 | LONG | SWING | MCX | 3100.20 | 3101.50 | Rs +1 | SIGNAL_FLIP |
| 54 | LONG | SWING | KPITTECH | 730.40 | 731.00 | Rs +21 | SIGNAL_FLIP |
| 55 | LONG | SWING | LTM | 4345.00 | 4347.20 | Rs +9 | SIGNAL_FLIP |